--- a/hw05/glib/Makefile
+++ b/hw05/glib/Makefile
@@ -1,2 +1,2 @@
 all:
-	gcc -Wall frequency.c `pkg-config --cflags --libs glib-2.0` -o frequency
+	gcc wordfreq.c `pkg-config --cflags --libs glib-2.0` -o wordfreq
